# gpu-offload-playground

./: CMakeLists.txt
field_api/: CMakeLists.txt  scheme_mod.F90  scheme_program.F90  scheme_program_gpu.F90
openacc/: CMakeLists.txt  open_acc_async_ptr.f90  openacc_out_of_bounds.f90
